; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_sky2.c_tx_inuse.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_sky2.c_tx_inuse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sky2_port = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sky2_port*)* @tx_inuse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tx_inuse(%struct.sky2_port* %0) #0 {
  %2 = alloca %struct.sky2_port*, align 8
  store %struct.sky2_port* %0, %struct.sky2_port** %2, align 8
  %3 = load %struct.sky2_port*, %struct.sky2_port** %2, align 8
  %4 = getelementptr inbounds %struct.sky2_port, %struct.sky2_port* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.sky2_port*, %struct.sky2_port** %2, align 8
  %7 = getelementptr inbounds %struct.sky2_port, %struct.sky2_port* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = sub nsw i32 %5, %8
  %10 = load %struct.sky2_port*, %struct.sky2_port** %2, align 8
  %11 = getelementptr inbounds %struct.sky2_port, %struct.sky2_port* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = sub nsw i32 %12, 1
  %14 = and i32 %9, %13
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
